--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                         <img src="images/next.png" alt="next">
                     </div>
                     <div class="social-media">
-                       <a href="#" target="_blank"><img class="media-icons" src="images/facebook.png" alt="facebook"></a>  
-                       <a href="#" target="_blank"><img class="media-icons" src="images/twitter.png" alt="twitter"></a> 
-                       <a href="#" target="_blank"><img class="media-icons" src="images/inatagram.png" alt="instagram"></a> 
+                       <a href="#" target="_blank"><img class="media-icons" src="images/facebook.svg" alt="facebook"></a>  
+                       <a href="#" target="_blank"><img class="media-icons" src="images/twitter.svg" alt="twitter"></a> 
+                       <a href="#" target="_blank"><img class="media-icons" src="images/instagram.svg" alt="instagram"></a> 
                     </div>
                 </div>
                 <div class="hero-img">
@@ -85,7 +85,7 @@
                 <p class="services-par">Executive Trade International is an University Application Centre, guiding Bangladeshi students to Australian, British, Canadian and Irish universities!</p>
                 <ul class="services-list">
                     <li class="services-list-item">
-                        <img class="services-img" src="images/circle1.png" alt="circle1">
+                        <img class="services-img" src="images/circle1.svg" alt="circle1">
                         <h3 class="services-subheading">Career Counselling</h3>
                         <p class="services-text">Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut. Blanditiis quos in minus. Voluptatum </p>
                         <div class="services-btn">
@@ -94,7 +94,7 @@
                         </div>
                     </li>
                     <li class="services-list-item">
-                        <img class="services-img" src="images/circle2.png" alt="circle2">
+                        <img class="services-img" src="images/circle2.svg" alt="circle2">
                         <h3 class="services-subheading">University Admissions</h3>
                         <p class="services-text">Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut. Blanditiis quos in minus. </p>
                         <div class="services-btn">
@@ -103,7 +103,7 @@
                         </div>
                     </li>
                     <li class="services-list-item">
-                        <img class="services-img" src="images/circle3.png" alt="circle3">
+                        <img class="services-img" src="images/circle3.svg" alt="circle3">
                         <h3 class="services-subheading">Visa Consultancy</h3>
                         <p class="services-text">Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut.  dicta accusantium fugiat.</p>
                         <div class="services-btn">
@@ -112,7 +112,7 @@
                         </div>
                     </li>
                     <li class="services-list-item">
-                        <img class="services-img" src="images/circle4.png" alt="circle4">
+                        <img class="services-img" src="images/circle4.svg" alt="circle4">
                         <h3 class="services-subheading">Accommodation</h3>
                         <p class="services-text">Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut. Blanditiis  dicta accusantium fugiat.</p>
                         <div class="services-btn">
@@ -121,7 +121,7 @@
                         </div>
                     </li>
                     <li class="services-list-item">
-                        <img class="services-img" src="images/circle5.png" alt="circle5">
+                        <img class="services-img" src="images/circle5.svg" alt="circle5">
                         <h3 class="services-subheading">Pre-Departure Briefing</h3>
                         <p class="services-text">Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut.  dolorem dicta accusantium fugiat.</p>
                         <div class="services-btn">
