--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;0,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
@@ -59,6 +60,7 @@
     </section>
 
     <main>
+
     <!-- Universities -->
         <section id="universities">
             <div class="container">
@@ -132,6 +134,205 @@
                 </ul>
             </div>
         </section>
+
+        <!-- News -->
+        <section id="news">
+            <div class="container">
+                <h2 class="news-heading">News</h2>
+                <p class="news-text">Sunt autem nusquam hoc epicurus in gravissimo bello animadversionis metu degendae praesidia firmissima. Torquatos nostros? quos tu paulo ante cum teneam sententiam, quid bonum esse vult.</p>
+                    <ul class="news-list">
+                        <li class="news-item">
+                            <img class="news-img" src="images/card1.png" alt="card1">
+                            <div class="news-time">
+                                <img class="news-icon" src="images/icon.svg" alt="icon">
+                                <p>17 Apr 2020</p>
+                            </div>
+                            <h3 class="news-list-title">Come On In. The Water’s Fine (Mostly).</h3>
+                        </li>
+                        <li class="news-item">
+                            <img class="news-img" src="images/card2.png" alt="card2">
+                            <div class="news-time">
+                                <img class="news-icon" src="images/icon.svg" alt="icon">
+                                <p>17 Apr 2020</p>
+                            </div>
+                            <h3 class="news-list-title">Trump Lays Plans to Reverse Obama’s Climate Change </h3>
+                        </li>
+                        <li class="news-item">
+                            <img class="news-img" src="images/card3.png" alt="card3">
+                            <div class="news-time">
+                                <img class="news-icon" src="images/icon.svg" alt="icon">
+                                <p>17 Apr 2020</p>
+                            </div>
+                            <h3 class="news-list-title">How a Little Bit of Hydra Regrows a Whole Animal</h3>
+                        </li>
+                    </ul>
+                    <a class="news-button" href="#">
+                        <div class="news-btn" >
+                            <span class="news-btn-span">Join Here</span>
+                            <img src="images/next.png" alt="next">
+                        </div>
+                         </a>
+            </div>
+        </section>
+
+        <!-- Events -->
+        <section id="events">
+            <div class="container">
+                <h2 class="events-heading">Upcoming University Events</h2>
+                <p class="events-text">Sunt autem nusquam hoc epicurus in gravissimo bello animadversionis metu degendae praesidia firmissima. Torquatos nostros? quos tu paulo ante cum teneam sententiam, quid bonum esse vult.</p>
+                <ul class="events-list">
+                    <li class="events-item">
+                        <div class="event-container">
+                            <img class="event-content-img" src="images/event-img.svg" alt="event-img">
+                            <h3 class="event-subheading">Macquarie University, Sydney, Australia</h3>
+                        </div>
+                        <p class="event-text">Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut. Blanditiis quos in minus. Voluptatum quia quia voluptas voluptatem vero ex possimus.</p>
+                        <div class="event-box">
+                            <div class="event-btn">
+                                <a class="event-btn-link" href="#">Learn More</a>
+                                <img src="images/next.png" alt="next">
+                            </div>
+                            <p class="event-time"> 10:00 AM - 2:00 PM</p>
+                        </div>
+                    </li>
+                    <li class="events-item">
+                        <div class="event-container">
+                            <img class="event-content-img" src="images/event-img2.svg" alt="event-img2">
+                            <h3 class="event-subheading">Federation University, Australia</h3>
+                        </div>
+                        <p class="event-text">Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut. Blanditiis quos in minus. Voluptatum quia quia voluptas voluptatem vero ex possimus</p>
+                        <div class="event-box">
+                            <div class="event-btn">
+                                <a class="event-btn-link" href="#">Learn More</a>
+                                <img src="images/next.png" alt="next">
+                            </div>
+                            <p class="event-time"> 10:00 AM - 2:00 PM</p>
+                        </div>
+                    </li>
+                </ul>
+                <div class="slider">
+                    <button class="slider-btn active"></button>
+                    <button class="slider-btn"></button>
+                    <button class="slider-btn"></button>
+                    <button class="slider-btn"></button>
+                </div>
+            </div>
+        </section>
+
+        <!-- Countries -->
+        <section id="countries">
+            <div class="container">
+                <h2 class="countries-heading">Countries We Covered</h2>
+                <p class="countries-text">Sunt autem nusquam hoc epicurus in gravissimo bello animadversionis metu degendae praesidia firmissima. Torquatos nostros? quos tu paulo ante cum teneam sententiam, quid bonum esse vult.</p>
+                <ul class="countries-list">
+                    <li class="countries-list-item">
+                        <img aria-colcount="countries-img" src="images/countries-img1.png" alt="countries-img1" class="countries-img">
+                        <h3 class="countries-subheadig">Study in Australia</h3>
+                        <p class="countries-par">Ut aut corporis accusantium illo ullam qui laudantium. Maxime rerum sunt et sequi </p>
+                    </li>
+                    <li class="countries-list-item">
+                        <img aria-colcount="countries-img" src="images/countries-img2.png" alt="countries-img2" class="countries-img">
+                        <h3 class="countries-subheadig">Study in Canada</h3>
+                        <p class="countries-par">Ut aut corporis accusantium illo ullam qui laudantium. Maxime rerum sunt et sequi </p>
+                    </li>
+                    <li class="countries-list-item">
+                        <img aria-colcount="countries-img" src="images/countries-img3.png" alt="countries-img3" class="countries-img">
+                        <h3 class="countries-subheadig">Study in Uk</h3>
+                        <p class="countries-par">Ut aut corporis accusantium illo ullam qui laudantium. Maxime rerum sunt et sequi  est.</p>
+                    </li>
+                </ul>
+                <div class="slider">
+                    <button class="slider-btn active"></button>
+                    <button class="slider-btn"></button>
+                    <button class="slider-btn"></button>
+                    <button class="slider-btn"></button>
+                </div>
+            </div>
+        </section>
+
+        <!-- Testimonal -->
+        <section id="testimonial">
+            <div class="container">
+                <h2 class="testimonal-heading">Testimonial</h2>
+                <p class="testimonal-text">Torquem detraxit hosti et quidem faciunt, ut et negent satis esse appetendum, alterum. Si sine causa? quae fuerit causa, mox videro; interea hoc epicurus in liberos.</p>
+                <ul class="testimonal-list">
+                    <li class="testimonal-item">
+                        <div class="testimonal-box">
+                            <div class="testimonal-desc">
+                                <img src="images/testimonal1.png" alt="testimonial" class="testimonal-img">
+                              <div class="testimonial-part">
+                                <h3 class="testimonal-subheading">Harrison Phillips</h3>
+                                <p class="testimonal-par">Reporter</p>
+                              </div>
+                            </div>
+                            <p class="testimonal-desc-par">Nisi cumque in necessitatibus molestiae eaque excepturi ab. Laboriosam ipsam voluptatem voluptatibus labore quam nihil. Quasi occaecati quos ratione quia aut molestiae velit et. Voluptatem id ea dicta inventore et quo impedit </p>
+                        </div>
+                    </li>
+                    <li class="testimonal-item">
+                        <div class="testimonal-box">
+                            <div class="testimonal-desc">
+                                <img src="images/testimonal2.png" alt="testimonial" class="testimonal-img">
+                               <div class="testimonial-part">
+                                <h3 class="testimonal-subheading">Ainara Vergara</h3>
+                                <p class="testimonal-par">Landscape Architect</p>
+                               </div>
+                            </div>
+                            <p class="testimonal-desc-par">Aut consectetur voluptas. Voluptatem minus quo voluptas in nulla iste. Fugiat alias sit sed dolorem quo. Qui praesentium et doloribus minima neque. Facere debitis sed est suscipit velit reprehenderit. Dolores aliquid dolore consequuntur ex.</p>
+                        </div>
+                    </li>
+                </ul>
+                <div class="slider">
+                    <button class="slider-btn active"></button>
+                    <button class="slider-btn"></button>
+                    <button class="slider-btn"></button>
+                    <button class="slider-btn"></button>
+                </div>
+            </div>
+        </section>
+        
+        <!-- Application -->
+        <div class="application">
+            <div class="container">
+                <div class="row">
+                    <p class="application-text">Ready to chase your dreams?</p>
+                    <a class="application-btn" href="#">
+                       Apply online
+                        <img class="app-icon" src="images/next.png" alt="next">
+                    </a>
+                </div>
+            </div>
+        </div>
+
     </main>
+
+    <!-- Footer -->
+    <footer class="footer-site"> 
+        <div class="container">
+            <div class="row">
+                <div class="footer-part">
+                    <img class="footer-logo" src="images/ETI-Logo.png" alt="logo">
+                    <p class="footer-text">Concord Royal Court (3rd floor)  Dhanmondi, Dhaka 1209, Bangladesh.</p>
+                    <p class="copyright">© 2020 Executive Trade International.</p>
+                </div>
+                <ul class="footer-list">
+                    <li class="footer-list-item"><a href="" class="footer-list-link">About Us</a></li>
+                    <li class="footer-list-item"><a href="" class="footer-list-link">Responsibilities</a></li>
+                    <li class="footer-list-item"><a href="" class="footer-list-link"> Our Services</a></li>
+                    <li class="footer-list-item"><a href="" class="footer-list-link">Contact</a></li>
+                </ul>
+                <ul class="footer-list">
+                    <li class="footer-list-item"><a href="" class="footer-list-link">Disclaimer</a></li>
+                    <li class="footer-list-item"><a href="" class="footer-list-link">Testimonials</a></li>
+                    <li class="footer-list-item"><a href="" class="footer-list-link">Privacy Policy</a></li>
+                    <li class="footer-list-item"><a href="" class="footer-list-link">Terms of Service</a></li>
+                </ul>
+                <div class="footer-icon">
+                    <i class='bx bxl-facebook'></i>
+                    <i class='bx bxl-twitter'></i>
+                    <i class='bx bxl-instagram' ></i>
+                </div>
+            </div> 
+        </div>
+    </footer>
 </body>
 </html>
